# enph253robot

./: README.md  TODO  diff.diff
LiftPot/.pioenvs/: structure.hash
OLED Screen/: .clang_complete  .gcc-flags.json  platformio.ini
OLED Screen/.pioenvs/: .sconsign.dblite  structure.hash
OLED Screen/.pioenvs/bluepill_f103c8/: firmware.elf
OLED Screen/.pioenvs/bluepill_f103c8/FrameworkArduino/: HardwareSerial.cpp.d  HardwareTimer.cpp.d  hooks.c.d  (+18 more)
OLED Screen/src/: main.cpp
claw/: platformio.ini
claw/src/: main.cpp
cv/tutorial/: t1.py
docs/: README.md
docs/_posts/: 2018-08-08-welcome-to-jekyll.markdown
ewok/lib/OLED_I2C/: OLED_I2C.cpp.d
ewok/lib/Screen/: Screen.cpp  Screen.h
ewok/src/: main.cpp
fft/: asm_test.asm  asm_test.c  fft_test.ino  sin_gen  sin_gen.cpp  sins.csv
fft/test/: fft.cpp  plotter.py  tinah.h
main/: .gitignore  CMakeLists.txt  platformio.ini
main/docs/: README.md
main/lib/ClawBase/: ClawBase.cpp  ClawBase.h
main/lib/Constants/: Constants.cpp  Constants.h
main/lib/Encoder/: Encoder.cpp  Encoder.h
main/lib/EncodersBase/: EncoderBase.cpp  EncoderBase.h
main/lib/FFT/: FFT.cpp  FFT.h
main/lib/InfraredBase/: InfraredBase.cpp  InfraredBase.h
main/lib/LineFollower/: LineFollower.cpp  LineFollower.h
main/lib/Menu/: Menu.cpp  Menu.h  MenuItem.cpp  MenuItem.h  MenuScreen.cpp  MenuScreen.h
main/lib/MenuItem/: MenuItem.cpp
main/lib/MotorBase/: MotorBase.cpp  MotorBase.h
main/lib/Movement/: Movement.cpp  Movement.h
main/lib/OLED_I2C/: OLED_I2C.cpp  OLED_I2C.h
main/lib/OLED_I2C/examples/: ex.txt
main/lib/PIDSpeed/: PIDSpeed.cpp  PIDSpeed.h
main/lib/UltrasoundBase/: UltrasoundBase.cpp  UltrasoundBase.h
main/lib/ZiplineLiftBase/: ZiplineLiftBase.cpp  ZiplineLiftBase.h
main/lib/constants/: Constants.cpp  constants.h
main/src/: main.cpp  procedures.cpp  procedures.h  testAll.cpp  testAll.h
main/test/: AllTests.cpp  EncoderTest.cpp  MovementTest.cpp  PIDSpeedTest.cpp  TestHelper.cpp  TestHelper.h  testDriver.cpp
main/test/mock/: ADC.cpp  ADC.h  AllMock.cpp  Arduino.cpp  Arduino.h  EEPROM.cpp  EEPROM.h  OLED_I2C.cpp  OLED_I2C.h  Servo.cpp  Servo.h  defines.h
motors/: .clang_complete  .gcc-flags.json  platformio.ini
motors/.pioenvs/: .sconsign.dblite  structure.hash
motors/.pioenvs/bluepill_f103c8/: firmware.elf
motors/lib/LineFollow/: LineFollow.cpp  LineFollow.h
motors/lib/MotorBase/: MotorBase.cpp  MotorBase.h
motors/lib/MyOLED/: MyOLED.cpp  MyOLED.h
motors/lib/OLED_I2C/: DefaultFonts.c.d
motors/lib/PIDScreen/: PIDScreen.cpp  PIDScreen.h
motors/src/: main.cpp
ultrasound/: .clang_complete  .gcc-flags.json  platformio.ini  ultrasound.ino
ultrasound/.pioenvs/: .sconsign.dblite  structure.hash
ultrasound/.pioenvs/bluepill_f103c8/: firmware.elf
ultrasound/src/: main.cpp
(+200 files in other folders)
